fix page scroll stop on mobile
And rename the main css file to reflect to version
and prevent the use of a cached file on the client side.

--- a/website/static/css/openkamer-1.0b4.css
+++ b/website/static/css/openkamer-1.0b4.css
@@ -7,8 +7,7 @@ body {
 }
 
 #base-footer {
-  position: relative;
-  height: 80px;
+  padding-bottom: 20px;
 }
 
 a.anchor {
